# payslip

./: .env.example  .gitignore  Cargo.toml  README.md  sample_data.csv
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  mailer.rs  main.rs  pdf.rs  state.rs
backend/src/handlers/: admin.rs  auth.rs  employee.rs  mod.rs
backend/src/middleware/: auth.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  lib.rs  store.rs
frontend/src/components/: header.rs  mod.rs
frontend/src/pages/: admin.rs  auth.rs  employee.rs  mod.rs  not_found.rs
shared/: Cargo.toml
shared/src/: lib.rs
