[package]
name    = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
shared     = { path = "../shared" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
bigdecimal = { workspace = true }

axum       = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "bigdecimal",     # <-- add this
    "uuid",
    "chrono",
    "migrate"
    # ...any other features you already have
] }

jsonwebtoken = "9"
rand         = "0.9"

lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "native-tls",
    "tokio1-native-tls",
    "smtp-transport",
    "hostname", 
    "builder"
] }

printpdf = "0.7"
csv      = "1.3"
dotenvy  = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
