[package]
name    = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }

# ── Leptos 0.8 ────────────────────────────────────────────────────────────────
leptos = { version = "0.8.6", features = ["csr", "nightly"] }
leptos_router = "0.8.6"
leptos_meta = "0.8.6"

# ── WASM / Web ────────────────────────────────────────────────────────────────
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

web-sys = { version = "0.3", features = [
    "Window", "Document",
    "HtmlInputElement", "HtmlSelectElement", "HtmlAnchorElement",
    "FormData", "File", "FileList", "Blob",
] }
js-sys = "0.3"

# ── HTTP / Storage ────────────────────────────────────────────────────────────
gloo-net     = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"

# ── Serde / Types ─────────────────────────────────────────────────────────────
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }

[profile.release]
opt-level = "z"
lto       = true
codegen-units = 1
panic     = "abort"
